@@ -2,6 +2,9 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) mod_proxy_balancer: mod_proxy_balancer does not handle sticky sessions
+     with tomcat correctly. PR36507. [Ruediger Pluem]
+
   *) mod_proxy: Run the request_status hook also if there are no free workers
      or all workers are in error state.
      [Ruediger Pluem, Brian Akins <brian.akins turner.com>]
